--- a/style.css
+++ b/style.css
@@ -87,9 +87,13 @@ html, body {
     border: 0;
     background: none;
 }
-#toolbar button#uploadbutton {
+#toolbar button#uploadbutton, #toolbar #downloadbutton {
     font-family: entypo;
     font-size: 25px;
+}
+#downloadbutton {
+    color: black;
+    text-decoration: none;
 }
 .aboutbox {
     border: 5px solid #99c;
