--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ html, body {
     overflow-y: auto;
     left: calc(50% - 200px);
     top: calc(50% - 100px);
+    z-index: 1000;
 }
 .popup-box {
     z-index: 1000;
