--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@ html, body {
     float: left;
 }
 #stderr_txt{
-    width: 90vw;
+    width: 70vw;
     font-family: Monospace;
     height: 17vh;
 }
 #stderr_list {
-    width: 90vw;
+    width: 70vw;
     font-family: Monospace;
     list-style-type: none;
     display: none;
@@ -36,6 +36,30 @@ html, body {
     clear: both;
     overflow: auto;
     height: 18vh;
+}
+#job_block {
+    display: block;
+    float: right;
+    width: 28vw;
+    background: #ddd;
+    height: 17vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+#job_block li {
+    transition: margin-left 0.75s ease-in;
+}
+#job_block li.good {
+    color: green;
+}
+#job_block li.bad {
+    color: red;
+}
+#job_block li.done {
+    margin-left: -150%;
+}
+#job_block li.running {
+    color: blue;
 }
 #statusbar {
     background: #eee;
