--- a/style.css
+++ b/style.css
@@ -186,12 +186,12 @@ html, body {
     background: #eee;
     position: absolute;
     max-width: 40%;
-    max-height: 40%;
+    max-height: 50%;
     overflow-y: auto;
     left: 35%;
     top: 20%;
     padding: 2mm;
-    padding-right: 2cm;
+    padding-right: 1cm;
 }
 .popup-box .close-button {
     font-family: entypo;
@@ -205,6 +205,12 @@ html, body {
 }
 .popup-box .close-button:hover {
     color: #f44;
+}
+.popup-box h2 {
+    font-size: 120%;
+    margin-top: 0;
+    margin-bottom: 0;
+    clear: both;
 }
 #restore-prompt {
     position: absolute;
